Fix clipped text

--- a/src/index.scss
+++ b/src/index.scss
@@ -25,6 +25,11 @@ body {
   overflow-x: hidden;
 }
 
+html,
+body {
+  touch-action: none;
+}
+
 .button {
   background: rgb(var(--foreground));
   color: rgb(var(--background));
@@ -117,7 +122,8 @@ input {
 @keyframes spin {
   from {
     transform: rotate(0deg);
-  } to {
+  }
+  to {
     transform: rotate(360deg);
   }
 }
